--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -20,6 +20,8 @@ dataSources:
         - ApprovalForAll
         - OwnershipTransferred
         - Transfer
+        - Token
+        - Owner
       abis:
         - name: Contract
           file: ./abis/Contract.json
